# Acrostic

./: .gitignore  CLAUDE.md  package-lock.json  package.json
Acrostic.Storage/: Cargo.toml  build.rs  cbindgen.toml
Acrostic.Storage/src/: ffi.rs
Acrostic.Storage/src/block/: mod.rs
Acrostic.Storage/src/crypto/: mod.rs
Acrostic.iOS/AcrostiKit/: BlockchainCore.swift
Acrostic.iOS/AcrostiKitTests/: AcrostiKitTests.swift  CoreDataTestHelper.swift  MockDataGenerator.swift  TestConfiguration.swift  TokenEntityRelationshipTests.swift
Acrostic.iOS/Acrostic.iOS/: Acrostic_iOS.entitlements  Acrostic_iOSApp.swift  Constants.swift  Info.plist
Acrostic.iOS/Acrostic.iOS.xcodeproj/: project.pbxproj
Acrostic.iOS/AcrosticWidgets/: AcrosticWidgets.entitlements  AcrosticWidgets.swift  AcrosticWidgetsBundle.swift  AcrosticWidgetsControl.swift  AcrosticWidgetsLiveActivity.swift  AppIntent.swift
Nactions-Apple/NactionsApp.xcodeproj/: project.pbxproj
Nactions-BlockchainCore/: Cargo.toml  build.rs  cbindgen.toml
Nactions-BlockchainCore/src/: lib.rs
XXX Acrostic-Swift/AcrostiKit/: BlockchainCore.swift  NactionsKit.h
XXX Acrostic-Swift/AcrostiKitTests/: NactionsKitTests.swift
XXX Acrostic-Swift/Acrostic-iOS/: Constants.swift  ContentView.swift  Info.plist  Nactions_XcodeApp.swift
XXX Acrostic-Swift/Acrostic-iOSTests/: Nactions_XcodeTests.swift
XXX Acrostic-Swift/Acrostic-iOSXcodeUITests/: Nactions_XcodeUITests.swift  Nactions_XcodeUITestsLaunchTests.swift
XXX Acrostic-Swift/AcrosticWidgets/: Info.plist  NactionsWidgetsControl.swift  NactionsWidgetsLiveActivity.swift
(+128 files in other folders)
